# ezsp

./: .env.example  README.md  pyproject.toml
.github/: COPILOT_CONTEXT.md
docs/: bulk_create_apps.md  getting_started.md  setup_cli.md  setup_delegated_auth.md  setup_portal.md
examples/: bulk_create_example.json  example_delegated_site_contents.py  example_drive_download.py  example_drive_folder_operations.py  example_drive_list.py  example_drive_read_write.py  example_drive_upload.py  example_list_create.py  example_list_get.py  example_list_update.py  example_site_contents.py
notebooks/: arcgis_auth_testing.ipynb  arcgis_http_testing.ipynb  graph_auth_site_attributes.ipynb
src/arcgisTest/: gettile.py
src/bulkCreate/: Bulk-CreateApps.ps1  bulk_create_apps.py
src/msgraphclient/: __init__.py  auth.py  client.py  drive.py  lists.py
src/msgraphtest/: auth.py  graph_client.py
src/python/: lists.py
tests/: test_arcgis_auth.py  test_auth.py  test_drive.py  test_graph_client.py  test_lists.py  test_site.py
