[project]
name = "msgraphclient"
version = "0.1.0"
authors = [{ name = "FSLobao" }]
description = "MSAL abstraction layer for SharePoint access through Microsoft Graph API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["microsoft-graph", "sharepoint", "msal", "graph-api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "msal>=1.28.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/FSLobao/MSGraphClient"
Documentation = "https://github.com/FSLobao/MSGraphClient/wiki"
Issues = "https://github.com/FSLobao/MSGraphClient/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msgraphclient"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/msgraphclient --cov-report=term-missing"

[tool.coverage.run]
source = ["src/msgraphclient"]
